# lbalancer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/: backend_pool.hpp
src/core/backend/: backend.cpp  backend.hpp  backend_pool.cpp  backend_pool.hpp  strategy.hpp
src/core/frontend/: frontend.cpp  frontend.hpp
src/core/meta/: meta_backend.hpp  meta_frontend.hpp  meta_server.hpp
src/core/server/: server.cpp  server.hpp
src/core/session/: basic_session.hpp  mode.hpp  session.hpp  session_handler.cpp
src/core/session/http/: http_session.cpp  http_session.hpp
src/core/session/ssl/: ssl_session.cpp  ssl_session.hpp
src/core/session/tcp/: tcp_session.cpp  tcp_session.hpp
src/core/workers/: service_pool.cpp  service_pool.hpp
src/frontend/: frontend.cpp
src/helpers/: configurator.cpp  configurator.hpp
src/helpers/configurator/: configurator.cpp  configurator.hpp
src/helpers/logger/: basic_logger.cpp  basic_logger.hpp  logger.hpp
src/helpers/meta/: meta_backend.hpp  meta_frontend.hpp  meta_server.hpp
src/os/unix/: daemonize.cpp  daemonize.hpp  unix.hpp
src/server/: server.cpp
src/session/: session.cpp  session.hpp  session_handler.hpp
src/workers/: service_pool.hpp
tests/unix/: test_config.yaml
